--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "react-native-code-push": "^7.0.5",
     "react-native-fs": "^2.20.0",
     "react-native-get-random-values": "~1.8.0",
+    "react-native-orientation-locker": "^1.5.0",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
+    "react-native-track-player": "^3.2.0",
     "react-native-web": "~0.18.7",
     "react-native-webview": "^11.23.1",
     "realm": "^10.20.0",
