--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
   <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
   <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" tools:ignore="ScopedStorage" />
   <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+  <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
 
   <queries>
     <intent>
@@ -29,33 +30,28 @@
   android:roundIcon="@mipmap/radiorder_icon_round" 
   android:allowBackup="true" 
   android:theme="@style/AppTheme" 
-  android:usesCleartextTraffic="true">
+  android:usesCleartextTraffic="true"
+      tools:targetApi="m">
     <meta-data android:name="expo.modules.updates.ENABLED" android:value="true"/>
     <meta-data android:name="expo.modules.updates.EXPO_SDK_VERSION" android:value="46.0.0"/>
     <meta-data android:name="expo.modules.updates.EXPO_UPDATES_CHECK_ON_LAUNCH" android:value="ALWAYS"/>
     <meta-data android:name="expo.modules.updates.EXPO_UPDATES_LAUNCH_WAIT_MS" android:value="0"/>
     <meta-data android:name="expo.modules.updates.EXPO_UPDATE_URL" android:value="https://exp.host/@yusufocaliskan/ro-player"/>
 
-    <receiver android:enabled="true" android:name=".BootUpReceiver"
-        android:permission="android.permission.RECEIVE_BOOT_COMPLETED"
-        android:exported="true">
-      <intent-filter>
-        <action android:name="android.intent.action.BOOT_COMPLETED" />
-        <category android:name="android.intent.category.DEFAULT" />
-      </intent-filter>
-    </receiver>
-    
+
     <activity 
     android:name=".MainActivity"
     android:label="@string/app_name"
     android:configChanges="keyboard|keyboardHidden|orientation|screenSize|uiMode"
     android:launchMode="singleTask" 
-    android:windowSoftInputMode="adjustResize" 
+    android:windowSoftInputMode="adjustResize"
     android:theme="@style/Theme.App.SplashScreen" 
     android:exported="true" 
     android:screenOrientation="landscape">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
+        <category android:name="android.intent.category.HOME" />
+        <category android:name="android.intent.category.DEFAULT" />
         <category android:name="android.intent.category.LAUNCHER"/>
       </intent-filter>
       <intent-filter>
@@ -69,6 +65,15 @@
     </activity>
     <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" android:exported="false"/>
 
-    
+    <receiver android:name=".BootUpReceiver"
+        android:exported="true">
+      <intent-filter>
+        <action android:name="android.intent.action.BOOT_COMPLETED" />
+        <action android:name="android.intent.action.QUICKBOOT_POWERON" />
+      </intent-filter>
+    </receiver>
+
+
+
   </application>
 </manifest>
