--- a/package.json
+++ b/package.json
@@ -42,7 +42,10 @@
     "react-native-tts": "^4.1.0",
     "react-native-web": "~0.18.7",
     "react-native-webview": "^11.23.1",
+    "react-redux": "^8.0.4",
     "realm": "^10.20.0",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
     "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
