--- a/package.json
+++ b/package.json
@@ -19,13 +19,12 @@
     "@rneui/base": "^4.0.0-rc.6",
     "@rneui/themed": "^4.0.0-rc.6",
     "axios": "^0.27.2",
-    "expo": "^46.0.0",
-    "expo-av": "~12.0.4",
+    "expo": "^46.0.15",
     "expo-font": "~10.2.0",
-    "expo-media-library": "~14.2.0",
+    "expo-media-library": "^14.2.0",
     "expo-permissions": "~13.2.0",
-    "expo-screen-orientation": "~4.3.0",
-    "expo-splash-screen": "~0.16.2",
+    "expo-screen-orientation": "^4.3.0",
+    "expo-splash-screen": "^0.16.2",
     "expo-status-bar": "~1.4.0",
     "expo-system-ui": "~1.3.0",
     "fast-xml-parser": "^4.0.9",
