--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "expo-font": "~10.2.0",
     "expo-media-library": "^14.2.0",
     "expo-permissions": "~13.2.0",
-    "expo-screen-orientation": "^4.3.0",
+    "expo-screen-orientation": "~4.3.0",
     "expo-splash-screen": "^0.16.2",
     "expo-status-bar": "~1.4.0",
     "expo-system-ui": "~1.3.0",
